# docflow

./: .env.example  .gitignore  AGENTS.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs-pages.yml  publish-pypi.yml
docs/: ecm.md  editing.md  index.md  llm.md  model.md  testing.md  workflow.md
evals/: prompt_cases.yaml
example/: README.md  process_excel_invoice.py
scripts/: __init__.py  export_workflow_graph.py  setup_opendataloader_pdf.sh
src/docflow_agent/: bootstrap.py  errors.py  settings.py
src/docflow_agent/cli/: dev.py  docs.py  process.py  test.py
src/docflow_agent/config/: __init__.py  prompt.py  settings.py
src/docflow_agent/core/: __init__.py
src/docflow_agent/core/analyze/: __init__.py  invoice.py
src/docflow_agent/core/category/: __init__.py  invoice.py
src/docflow_agent/core/classify/: __init__.py  document.py  excel.py
src/docflow_agent/core/combine/: __init__.py  invoice.py
src/docflow_agent/core/edit/: __init__.py  invoice.py
src/docflow_agent/core/parse/: __init__.py  excel.py
src/docflow_agent/core/rules/: __init__.py  accounting.py  (+1 more)
src/docflow_agent/entrypoints/: __init__.py  api.py  dev.py  docs.py  smoke.py  ui.py  workflow.py
src/docflow_agent/errors/: __init__.py  base.py  ecm.py  llm.py  outbound.py  processing.py
src/docflow_agent/inbound/: __init__.py
src/docflow_agent/outbound/: __init__.py  document_automation.py  ecm.py  files.py  llm.py  mail.py
src/docflow_agent/ports/: __init__.py  chat_history.py  llm.py  queue.py  rdbms.py  repositories.py  session_context.py  vector_store.py
src/docflow_agent/testing/: document_workflow.py
src/docflow_agent/tools/: __init__.py  document.py
src/docflow_agent/types/: __init__.py  bundle.py  common.py  documents.py  edit.py  external.py  results.py
src/docflow_agent/usecases/: __init__.py  application_info.py  chat.py  document_workflow.py  process_document.py  process_request.py  process_source.py  respond_to_chat.py  stage_upload.py
src/docflow_agent/workflow/: __init__.py  document_agent.py  document_chat_workflow.py  document_requests.py  document_services.py  document_workflow.py  nodes.py  routes.py  state.py  visualize.py
tests/: test_accounting_rule.py  test_classify_excel.py  test_document_automation.py  test_ecm.py  test_edit_invoice.py  test_invoice_rule.py  test_llm.py  test_process_document.py  test_process_source.py  test_source_kind_excel.py
tests/architecture/: test_import_directions.py
tests/inbound/langgraph/: test_repository.py  test_state_safety.py  test_workflow_document_to_mail.py  test_workflow_prompt.py
tests/integration/outbound/: test_db.py  test_document_automation.py  test_ecm.py  test_llm.py  test_ocr.py  test_pdf.py  test_queue.py  test_rdbms.py  test_sap.py  test_storage.py  test_vector_store.py
tests/integration/workflow/: test_document_agent_smoke.py
tests/support/: document_workflow.py
tests/unit/core/: test_accounting_rule.py  test_category_invoice.py  test_combine_invoice.py  test_edit_invoice.py  test_invoice_rule.py  test_parse_excel.py  test_source_kind_excel.py
tests/unit/inbound/: test_api_routes.py  test_entrypoints.py
tests/unit/types/: test_boundary_models.py
tests/unit/usecases/: test_bootstrap.py  test_chat.py  test_document_workflow.py  test_process_source.py
tests/unit/workflow/: test_document_agent.py  test_export_workflow_graph.py  test_repository.py  test_route_flow.py  test_state_safety.py  test_workflow_document_to_mail.py  test_workflow_prompt.py
(+83 files in other folders)
