[project]
name = "docflow-agent"
version = "0.1.0"
description = "Minimal document-processing service skeleton for local development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.0.0",
  "streamlit>=1.44.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.0",
  "mypy>=1.10.0",
]

[project.scripts]
app-process = "docflow_agent.cli.process:main"
app-dev = "docflow_agent.cli.dev:main"
app-test = "docflow_agent.cli.test:main"
app-docs = "docflow_agent.cli.docs:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
packages = ["docflow_agent"]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
