[project]
name = "docflow-agent"
version = "0.1.0"
description = "Source-driven document-processing framework for local development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "streamlit>=1.44.0",
  "uvicorn>=0.32.0",
  "langchain>=0.3.0",
  "langchain-google-genai>=2.1.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.2.0",
  "opendataloader-pdf>=2.0.0",
  "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.11.0",
  "mypy>=1.10.0",
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
]

[project.scripts]
docflow-api = "docflow_agent.entrypoints.api:main"
docflow-ui = "docflow_agent.entrypoints.ui:main"
docflow-workflow = "docflow_agent.entrypoints.workflow:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
packages = ["docflow_agent"]
strict = true
